syntax = "proto3";

package inventory;

service InventoryService {
    rpc CheckAvailability(CheckAvailabilityRequest) returns (CheckAvailabilityResponse);
    rpc ReserveItems(ReserveItemsRequest) returns (ReserveItemsResponse);
}

message CheckAvailabilityRequest {
    repeated Item items = 1;
}

message CheckAvailabilityResponse {
    bool available = 1;
}

message ReserveItemsRequest {
    string order_id = 1;
    string customer_id = 2;
    repeated Item items = 3;
}

message ReserveItemsResponse {
}

message Item {
    string product_id = 1;
    int32 quantity = 2;
}
